project(SysY-Compiler)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_BUILD_TYPE Debug)


add_executable(
        SysY-Compiler
        src/main.cpp
        src/Lexer/Lexer.cpp
        src/Lexer/Lexer.h
        src/Lexer/LexType.h
        src/NonterminalCharacter/AddExp.cpp
        src/NonterminalCharacter/AddExp.h
        src/NonterminalCharacter/Block.cpp
        src/NonterminalCharacter/Block.h
        src/NonterminalCharacter/BlockItem.cpp
        src/NonterminalCharacter/BlockItem.h
        src/NonterminalCharacter/BType.cpp
        src/NonterminalCharacter/BType.h
        src/NonterminalCharacter/CompUnit.cpp
        src/NonterminalCharacter/CompUnit.h
        src/NonterminalCharacter/Cond.cpp
        src/NonterminalCharacter/Cond.h
        src/NonterminalCharacter/ConstDecl.cpp
        src/NonterminalCharacter/ConstDecl.h
        src/NonterminalCharacter/ConstDef.cpp
        src/NonterminalCharacter/ConstDef.h
        src/NonterminalCharacter/ConstExp.cpp
        src/NonterminalCharacter/ConstExp.h
        src/NonterminalCharacter/ConstInitVal.cpp
        src/NonterminalCharacter/ConstInitVal.h
        src/NonterminalCharacter/Decl.cpp
        src/NonterminalCharacter/Decl.h
        src/NonterminalCharacter/EqExp.cpp
        src/NonterminalCharacter/EqExp.h
        src/NonterminalCharacter/Exp.cpp
        src/NonterminalCharacter/Exp.h
        src/NonterminalCharacter/ForStmt.cpp
        src/NonterminalCharacter/ForStmt.h
        src/NonterminalCharacter/FuncDef.cpp
        src/NonterminalCharacter/FuncDef.h
        src/NonterminalCharacter/FuncFParam.cpp
        src/NonterminalCharacter/FuncFParam.h
        src/NonterminalCharacter/FuncFParams.cpp
        src/NonterminalCharacter/FuncFParams.h
        src/NonterminalCharacter/FuncRParams.cpp
        src/NonterminalCharacter/FuncRParams.h
        src/NonterminalCharacter/FuncType.cpp
        src/NonterminalCharacter/FuncType.h
        src/NonterminalCharacter/InitVal.cpp
        src/NonterminalCharacter/InitVal.h
        src/NonterminalCharacter/LAndExp.cpp
        src/NonterminalCharacter/LAndExp.h
        src/NonterminalCharacter/LOrExp.cpp
        src/NonterminalCharacter/LOrExp.h
        src/NonterminalCharacter/LVal.cpp
        src/NonterminalCharacter/LVal.h
        src/NonterminalCharacter/MainFuncDef.cpp
        src/NonterminalCharacter/MainFuncDef.h
        src/NonterminalCharacter/MulExp.cpp
        src/NonterminalCharacter/MulExp.h
        src/NonterminalCharacter/Node.cpp
        src/NonterminalCharacter/Node.h
        src/NonterminalCharacter/Nonterminals.h
        src/NonterminalCharacter/Number.cpp
        src/NonterminalCharacter/Number.h
        src/NonterminalCharacter/PrimaryExp.cpp
        src/NonterminalCharacter/PrimaryExp.h
        src/NonterminalCharacter/RelExp.cpp
        src/NonterminalCharacter/RelExp.h
        src/NonterminalCharacter/Stmt.cpp
        src/NonterminalCharacter/Stmt.h
        src/NonterminalCharacter/UnaryExp.cpp
        src/NonterminalCharacter/UnaryExp.h
        src/NonterminalCharacter/UnaryOp.cpp
        src/NonterminalCharacter/UnaryOp.h
        src/NonterminalCharacter/VarDecl.cpp
        src/NonterminalCharacter/VarDecl.h
        src/NonterminalCharacter/VarDef.cpp
        src/NonterminalCharacter/VarDef.h
        src/Parser/Parser.cpp
        src/Parser/Parser.h
        src/Parser/temp.txt
        src/Parser/temp2.txt
        src/SymbolManager/Func.cpp
        src/SymbolManager/Func.h
        src/SymbolManager/Symbol.cpp
        src/SymbolManager/Symbol.h
        src/Lexer/Token.cpp src/Lexer/Token.h
        src/NonterminalCharacter/NodeType.cpp
        src/NonterminalCharacter/NodeType.h
        src/Visitor/Visitor.cpp
        src/Visitor/Visitor.h
        src/SymbolManager/SymbolTable.cpp
        src/SymbolManager/SymbolTable.h)