project(SysY-Compiler)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_BUILD_TYPE Debug)

add_executable(
        SysY-Compiler
        src/main.cpp
        src/Frontend/Lexer/Lexer.cpp
        src/Frontend/Lexer/Lexer.h
        src/Frontend/Lexer/LexType.h
        src/Frontend/NonterminalCharacter/AddExp.cpp
        src/Frontend/NonterminalCharacter/AddExp.h
        src/Frontend/NonterminalCharacter/Block.cpp
        src/Frontend/NonterminalCharacter/Block.h
        src/Frontend/NonterminalCharacter/BlockItem.cpp
        src/Frontend/NonterminalCharacter/BlockItem.h
        src/Frontend/NonterminalCharacter/BType.cpp
        src/Frontend/NonterminalCharacter/BType.h
        src/Frontend/NonterminalCharacter/CompUnit.cpp
        src/Frontend/NonterminalCharacter/CompUnit.h
        src/Frontend/NonterminalCharacter/Cond.cpp
        src/Frontend/NonterminalCharacter/Cond.h
        src/Frontend/NonterminalCharacter/ConstDecl.cpp
        src/Frontend/NonterminalCharacter/ConstDecl.h
        src/Frontend/NonterminalCharacter/ConstDef.cpp
        src/Frontend/NonterminalCharacter/ConstDef.h
        src/Frontend/NonterminalCharacter/ConstExp.cpp
        src/Frontend/NonterminalCharacter/ConstExp.h
        src/Frontend/NonterminalCharacter/ConstInitVal.cpp
        src/Frontend/NonterminalCharacter/ConstInitVal.h
        src/Frontend/NonterminalCharacter/Decl.cpp
        src/Frontend/NonterminalCharacter/Decl.h
        src/Frontend/NonterminalCharacter/EqExp.cpp
        src/Frontend/NonterminalCharacter/EqExp.h
        src/Frontend/NonterminalCharacter/Exp.cpp
        src/Frontend/NonterminalCharacter/Exp.h
        src/Frontend/NonterminalCharacter/ForStmt.cpp
        src/Frontend/NonterminalCharacter/ForStmt.h
        src/Frontend/NonterminalCharacter/FuncDef.cpp
        src/Frontend/NonterminalCharacter/FuncDef.h
        src/Frontend/NonterminalCharacter/FuncFParam.cpp
        src/Frontend/NonterminalCharacter/FuncFParam.h
        src/Frontend/NonterminalCharacter/FuncFParams.cpp
        src/Frontend/NonterminalCharacter/FuncFParams.h
        src/Frontend/NonterminalCharacter/FuncRParams.cpp
        src/Frontend/NonterminalCharacter/FuncRParams.h
        src/Frontend/NonterminalCharacter/FuncType.cpp
        src/Frontend/NonterminalCharacter/FuncType.h
        src/Frontend/NonterminalCharacter/InitVal.cpp
        src/Frontend/NonterminalCharacter/InitVal.h
        src/Frontend/NonterminalCharacter/LAndExp.cpp
        src/Frontend/NonterminalCharacter/LAndExp.h
        src/Frontend/NonterminalCharacter/LOrExp.cpp
        src/Frontend/NonterminalCharacter/LOrExp.h
        src/Frontend/NonterminalCharacter/LVal.cpp
        src/Frontend/NonterminalCharacter/LVal.h
        src/Frontend/NonterminalCharacter/MainFuncDef.cpp
        src/Frontend/NonterminalCharacter/MainFuncDef.h
        src/Frontend/NonterminalCharacter/MulExp.cpp
        src/Frontend/NonterminalCharacter/MulExp.h
        src/Frontend/NonterminalCharacter/Node.cpp
        src/Frontend/NonterminalCharacter/Node.h
        src/Frontend/NonterminalCharacter/Nonterminals.h
        src/Frontend/NonterminalCharacter/Number.cpp
        src/Frontend/NonterminalCharacter/Number.h
        src/Frontend/NonterminalCharacter/PrimaryExp.cpp
        src/Frontend/NonterminalCharacter/PrimaryExp.h
        src/Frontend/NonterminalCharacter/RelExp.cpp
        src/Frontend/NonterminalCharacter/RelExp.h
        src/Frontend/NonterminalCharacter/Stmt.cpp
        src/Frontend/NonterminalCharacter/Stmt.h
        src/Frontend/NonterminalCharacter/UnaryExp.cpp
        src/Frontend/NonterminalCharacter/UnaryExp.h
        src/Frontend/NonterminalCharacter/UnaryOp.cpp
        src/Frontend/NonterminalCharacter/UnaryOp.h
        src/Frontend/NonterminalCharacter/VarDecl.cpp
        src/Frontend/NonterminalCharacter/VarDecl.h
        src/Frontend/NonterminalCharacter/VarDef.cpp
        src/Frontend/NonterminalCharacter/VarDef.h
        src/Frontend/Parser/Parser.cpp
        src/Frontend/Parser/Parser.h
        src/IR/SymbolManager/Func.cpp
        src/IR/SymbolManager/Func.h
        src/IR/SymbolManager/Symbol.cpp
        src/IR/SymbolManager/Symbol.h
        src/Frontend/Lexer/Token.cpp src/Frontend/Lexer/Token.h
        src/Frontend/NonterminalCharacter/NodeType.cpp
        src/Frontend/NonterminalCharacter/NodeType.h
        src/IR/Visitor.cpp
        src/IR/Visitor.h
        src/IR/SymbolManager/SymbolTable.cpp
        src/IR/SymbolManager/SymbolTable.h
        src/IR/Values/Value.cpp
        src/IR/Values/Value.h
        src/IR/Values/BasicBlock.cpp
        src/IR/Values/BasicBlock.h
        src/IR/Values/Function.cpp
        src/IR/Values/Function.h
        src/IR/IRModule.cpp
        src/IR/IRModule.h
        src/IR/IRBuildFactory.cpp
        src/IR/IRBuildFactory.h
        src/IR/Values/User.cpp
        src/IR/Values/User.h
        src/IR/Use.cpp
        src/IR/Use.h
        src/IR/ValueType.h
)
